Main intro page

--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -1,78 +1,19 @@
-import Alert from '@mui/material/Alert';
-import Stack from '@mui/material/Stack';
+import HomeLayout from "../src/components/home/HomeLayout";
+import HomeHeroMovie from "../src/movies/home/HomeHeroMovie";
+import HomeStrengthMovie from "../src/movies/home/HomeStrengthMovie";
 
-<meta http-equiv="refresh" content="0; url=/docs" />
+<HomeLayout>
+  <HomeHeroMovie />
+</HomeLayout>
 
-## Outline
 
-![Nestia Logo](/logo.png)
 
-<span style={{ display: "flex", flexDirection: "row" }}>
-{[
-    [
-        "MIT License",
-        "https://img.shields.io/badge/license-MIT-blue.svg",
-        "https://github.com/samchon/nestia/blob/master/LICENSE",
-    ],
-    [
-        "NPM Version",
-        "https://img.shields.io/npm/v/@nestia/core.svg",
-        "https://www.npmjs.com/package/@nestia/core",
-    ],
-    [
-        "NPM Downloads",
-        "https://img.shields.io/npm/dm/nestia.svg",
-        "https://www.npmjs.com/package/nestia",
-    ],
-    [
-        "Build Status",
-        "https://github.com/samchon/nestia/workflows/build/badge.svg",
-        "https://github.com/samchon/nestia/actions?query=workflow%3Abuild",
-    ],
-    [
-        "Guide Documents",
-        "https://img.shields.io/badge/guide-documents-forestgreen",
-        "https://nestia.io/docs/",
-    ]
-].map(([alt, image, url]) => (
-    <a href={url} style={{ marginTop: "30px", marginRight: "6px" }}>
-        <img src={image} alt={alt} />
-    </a>
-))}
-</span>
 
-Nestia is a set of helper libraries for [NestJS](https://docs.nestjs.com), supporting below features:
+## Key Features
 
-  - `@nestia/core`: super-fast decorators
-  - `@nestia/sdk`:
-    - Swagger generator evolved than ever
-    - SDK library generator for clients
-    - Mockup Simulator for client developers
-    - Automatic E2E test functions generator
-  - `@nestia/migrate`: migration from Swagger to NestJS
-  - `nestia`: just CLI (command line interface) tool
-
-<br/>
-<Stack spacing={1}>
-    <Alert severity="warning">
-        Only **one line** required, with pure TypeScript type
-    </Alert>
-    <Alert severity="success">
-        Enhance performance **30x** up
-        - Runtime validator is **20,000x** faster than `class-validator`
-        - JSON serialization is **200x faster** than `class-transformer`
-    </Alert>
-    <Alert severity="info"> 
-        Software Development Kit
-        - SDK is a collection of `fetch` functions with type definitions like [tRPC](https://trpc.io/)
-        - Mockup simulator means embedded backend simulator in SDK
-          - similar with [msw](https://mswjs.io/), but fully automated
-    </Alert>
-</Stack>
-
-![SDK](https://user-images.githubusercontent.com/13158709/215004990-368c589d-7101-404e-b81b-fbc936382f05.gif)
-
-> Left is NestJS server code, and right is client (frontend) code utilizing SDK
+<HomeLayout>
+  <HomeStrengthMovie />
+</HomeLayout>
 
 
 
@@ -82,4 +23,4 @@ Thanks for your support.
 
 Your donation would encourage `nestia` development.
 
-[![Backers](https://opencollective.com/nestia/backers.svg?width=1000)](https://opencollective.com/nestia)
+[![Sponsors](https://opencollective.com/nestia/badge.svg?avatarHeight=75&width=600)](https://opencollective.com/nestia)
