--- a/website/pages/docs/core/TypedQuery.mdx
+++ b/website/pages/docs/core/TypedQuery.mdx
@@ -15,12 +15,22 @@ export namespace TypedQuery {
 
 Decorators for query parameters.
 
-<Callout type="warning">
+<Callout type="info">
+
 **What the query parameters are?**
 
 This is the query parameters!
 
   - `name=Samchon&age=20&sex=male`
+
+</Callout>
+
+<Callout type="warning">
+
+`@TypedQuery()` is not essential for [Swagger Documents](./sdk/swagger) or [SDK Library](./sdk/sdk) building.
+
+Therefore, it is not a matter to use `@TypedQuery()` or `@Query()` of the original NestJS.
+
 </Callout>
 
 
