--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -64,8 +64,8 @@ Nestia is a set of helper libraries for [NestJS](https://docs.nestjs.com), suppo
   <Alert severity="info"> 
     Software Development Kit
 
-    - SDK is a collection of `fetch` functions with type definitions like [tRPC](https://trpc.io/)
-    - Mockup simulator means embedded backend simulator in SDK
+    - Collection of typed `fetch` functions with DTO structures like [tRPC](https://trpc.io/)
+    - Mockup simulator means embedded backend simulator in the SDK
       - similar with [msw](https://mswjs.io/), but fully automated
   </Alert>
 </Stack>
