--- a/website/pages/docs/sdk/sdk.mdx
+++ b/website/pages/docs/sdk/sdk.mdx
@@ -99,7 +99,7 @@ export namespace update {
   </Tab>
 </Tabs>
 
-Collection of `fetch` functions with type definitions.
+Collection of typed `fetch` functions with DTO structures.
 
 Configure [`nestia.config.ts`](#nestiaconfigts) file and run `npx nestia sdk` command. Then, `@nestia/sdk` will analyze your NestJS backend server code, and generate SDK (Software Development Kit) library. The newly generated SDK library would be composed with `DTO` and `fetch` functions with type definitions following your NestJS server. 
 
