--- a/website/pages/docs/core/TypedRoute.mdx
+++ b/website/pages/docs/core/TypedRoute.mdx
@@ -19,8 +19,18 @@ Furthermore, as `TypedRoute` utilizes [`typia.assertStringify<T>()`](https://typ
 
 Moreover, `TypedRoute` is much easier than `class-transformer`, because it just needs only pure TypeScript type definition. If you can't understand the word "pure TypeScript type", then move to below [**#How to use**](#how-to-use) section and read the `IBbsArticle` interface type. You may understand what it means.
 
-<Callout>
+<Callout type="info">
+
 If you want `application/x-www-form-urlencoded` type, use [`@TypedQuery.Post()`](./TypedQuery#typedquerypost) instead.
+
+</Callout>
+
+<Callout type="warning">
+
+`@TypedRoute.Get()` is not essential for [Swagger Documents](./sdk/swagger) or [SDK Library](./sdk/sdk) building.
+
+Therefore, it is not a matter to use `@TypedRoute.Post()` or `@Post()` of the original NestJS.
+
 </Callout>
 
 
