--- a/website/pages/docs/sdk/sdk.mdx
+++ b/website/pages/docs/sdk/sdk.mdx
@@ -376,7 +376,10 @@ At least, you've to configure those two properties:
 
 When you've completed above configuration, just run `npx nestia sdk` command. Then, SDK library would be newly generated, and placed into the `$config.output` directory following your `nestia.config.ts` configuration.
 
-By the way, `nestia.config.ts` supports alternative options specifying the target controller classes instead of using the `Module` instance. If your backend application server does not have special configuration like `setGlobalPrefix`, `enableVersioning` and `RouterModule`, it is okay to specifying the target controller classes just by writing their file path like below.
+### Input Pattern
+`nestia.config.ts` supports alternative options instead of using the `Module` instance. 
+
+If your backend application server does not have special configuration like `setGlobalPrefix`, `enableVersioning` and `RouterModule`, it is okay to specifying the target controller classes just by writing their file path like below.
 
 <Tabs 
   items={[
@@ -446,6 +449,413 @@ const NESTIA_CONFIG: INestiaConfig = {
   distribute: "packages/api",
 };
 export default NESTIA_CONFIG;
+```
+  </Tab>
+</Tabs>
+
+### Clone Mode
+<Tabs items={[
+  <code>nestia.config.ts</code>,
+  "Source Controller",
+  "Cloned DTO types"
+]}>
+  <Tab>
+```typescript copy filename="nestia.config.ts" showLineNumbers {17}
+import { INestiaConfig } from "@nestia/sdk";
+import { NestFactory } from "@nestjs/core";
+ 
+import { YourModule } from "./src/YourModule";
+ 
+const NESTIA_CONFIG: INestiaConfig = {
+  input: async () => {
+    const app = await NestFactory.create(YourModule);
+    // app.setGlobalPrefix("api");
+    // app.enableVersioning({
+    //     type: VersioningType.URI,
+    //     prefix: "v",
+    // })
+    return app;
+  },
+  output: "src/api",
+  clone: true,
+  distribute: "packages/api",
+};
+export default NESTIA_CONFIG;
+```
+  </Tab>
+  <Tab>
+```typescript showLineNumbers
+import core from "@nestia/core";
+import { Controller } from "@nestjs/common";
+import typia, { tags } from "typia";
+
+@Controller("bbs/articles/:section")
+export class TypedBodyControlleer {
+  @core.TypedRoute.Get()
+  public async index(
+    @core.TypedParam("section") section: string,
+    @core.TypedQuery() query: IPage.IRequest,
+  ): Promise<IPage<IBbsArticle.ISummary>> {
+    const limit: number = query.limit ?? 100;
+    const current: number = query.page ?? 1;
+    const records: number = limit * (current + 3) + 5;
+
+    return {
+      pagination: {
+        current,
+        limit,
+        records,
+        pages: Math.ceil(records / limit),
+      },
+      data: new Array(limit).fill("").map(() => ({
+        ...typia.random<IBbsArticle.ISummary>(),
+        section,
+      })),
+    };
+  }
+}
+interface IPage<T> {
+  data: T[];
+  pagination: IPage.IPagination;
+}
+namespace IPage {
+  export interface IRequest {
+    page?: null | (number & tags.Type<"uint32">);
+    limit?: null | (number & tags.Type<"uint32">);
+  }
+  export interface IPagination {
+    current: number & tags.Type<"uint32">;
+    limit: number & tags.Type<"uint32">;
+    records: number & tags.Type<"uint32">;
+    pages: number & tags.Type<"uint32">;
+  }
+}
+
+namespace IBbsArticle {
+  export interface ISummary {
+    id: string & tags.Format<"uuid">;
+    section: string;
+    writer: string;
+    title: string & tags.MinLength<3> & tags.MaxLength<50>;
+    created_at: string & tags.Format<"date-time">;
+    /**
+     * @format date-time
+     */
+    updated_at: string;
+  }
+}
+```
+  </Tab>
+  <Tab>
+```typescript showLineNumbers
+export namespace IPageIBbsArticle {
+  export type ISummary = {
+    data: IBbsArticle.ISummary[];
+    pagination: IPage.IPagination;
+  };
+}
+export namespace IPage {
+  export type IRequest = {
+    page?: null | undefined | (number & Type<"uint32">);
+    limit?: null | undefined | (number & Type<"uint32">);
+  };
+  export type IPagination = {
+    current: number & Type<"uint32">;
+    limit: number & Type<"uint32">;
+    records: number & Type<"uint32">;
+    pages: number & Type<"uint32">;
+  };
+}
+
+export namespace IBbsArticle {
+  export type ISummary = {
+    id: string & Format<"uuid">;
+    section: string;
+    writer: string;
+    title: string & MinLength<3> & MaxLength<50>;
+    created_at: string & Format<"date-time">;
+    updated_at: string & Format<"date-time">;
+  };
+}
+```
+  </Tab>
+</Tabs>
+
+If you configure `clone` property to be `true` in the `nestia.config.ts` file, all of DTO structures used in the backend server would be cloned into the `structures` directory, and the SDK library would be refer to the cloned DTO structures instead of the original.
+
+This `clone` mode is useful when you'd not separated DTO structures from the ORM models. When you're using `TypeORM` or `Prisma`, and returning the ORM generated instance directly in the controller without independent DTO structure definition, your SDK library requires the `TypeORM` or `Prisma` dependency install. By the dependency, client (frontend) developers may install the ORM library that they never need. 
+
+In that case, it would better to remove the dependency by using this `clone` mode.
+
+
+
+
+### Propagation Mode
+<Tabs items={[
+  <code>nestia.config.ts</code>, 
+  <code>IPropagation.ts</code>,
+]}>
+  <Tab>
+```typescript copy filename="nestia.config.ts" showLineNumbers {17}
+import { INestiaConfig } from "@nestia/sdk";
+import { NestFactory } from "@nestjs/core";
+
+import { YourModule } from "./src/YourModule";
+
+const config: INestiaConfig = {
+  input: async () => {
+    const app = await NestFactory.create(YourModule);
+    // app.setGlobalPrefix("api");
+    // app.enableVersioning({
+    //     type: VersioningType.URI,
+    //     prefix: "v",
+    // })
+    return app;
+  },
+  output: "src/api",
+  propagate: true,
+  distribute: "packages/api",
+};
+export default config;
+```
+  </Tab>
+  <Tab>
+```typescript filename="IPropagation.ts" showLineNumbers
+import { Primitive } from "./Primitive";
+
+/**
+ * Propagation type.
+ *
+ * `IPropagation` is a type gathering all possible status codes and their body
+ * data types as a discriminated union type. You can specify the status code and
+ * its body data type just by using conditional statement like below.
+ *
+ * ```typescript
+ * type Output = IPropagation<{
+ *    200: ISeller.IAuthorized;
+ *    400: TypeGuardError.IProps;
+ * >};
+ *
+ * const output: Output = await sdk.sellers.authenticate.join(input);
+ * if (output.success) {
+ *     // automatically casted to "ISeller.IAuthorized" type
+ *     const authorized: ISeller.IAuthorized = output.data;
+ * } else if (output.status === 400) {
+ *     // automatically casted to "TypeGuardError.IProps" type
+ *     const error: TypeGuardError.IProps = output.data;
+ * } else {
+ *     // unknown type when out of pre-defined status codes
+ *     const result: unknown = output.data;
+ * }
+ * ```
+ *
+ * For reference, this `IPropagation` type is utilized by SDK library generated by
+ * `@nestia/sdk`, when you've configured {@link INestiaConfig.propagate} to be `true`.
+ * In that case, SDK functions generated by `@nestia/sdk` no more returns response DTO
+ * typed data directly, but returns this `IPropagation` typed object instead.
+ *
+ * @template StatusMap Map of status code and its body data type.
+ * @template Success Default success status code.
+ * @author Jeongho Nam - https://github.com/samchon
+ */
+export type IPropagation<
+  StatusMap extends {
+    [P in IPropagation.Status]?: any;
+  },
+  Success extends number = 200 | 201,
+> =
+  | {
+      [P in keyof StatusMap]: IPropagation.IBranch<
+        P extends Success ? true : false,
+        P,
+        StatusMap[P]
+      >;
+    }[keyof StatusMap]
+  | IPropagation.IBranch<false, unknown, unknown>;
+export namespace IPropagation {
+  /**
+   * Type of configurable status codes.
+   *
+   * The special characters like `2XX`, `3XX`, `4XX`, `5XX` are meaning the range
+   * of status codes. If `5XX` is specified, it means the status code is in the
+   * range of `500` to `599`.
+   */
+  export type Status = number | "2XX" | "3XX" | "4XX" | "5XX";
+
+  /**
+   * Branch type of propagation.
+   *
+   * `IPropagation.IBranch` is a branch type composing `IPropagation` type,
+   * which is gathering all possible status codes and their body data types
+   * as a union type.
+   */
+  export interface IBranch<Success extends boolean, StatusValue, BodyData> {
+    success: Success;
+    status: StatusValue extends "2XX" | "3XX" | "4XX" | "5XX"
+      ? StatusRange<StatusValue>
+      : StatusValue extends number
+      ? StatusValue
+      : never;
+    data: Primitive<BodyData>;
+    headers: Record<string, string | string[]>;
+  }
+
+  /**
+   * Range of status codes by the first digit.
+   */
+  export type StatusRange<T extends "2XX" | "3XX" | "4XX" | "5XX"> = T extends 0
+    ? IntRange<200, 299>
+    : T extends 3
+    ? IntRange<300, 399>
+    : T extends 4
+    ? IntRange<400, 499>
+    : IntRange<500, 599>;
+
+  type IntRange<F extends number, T extends number> = Exclude<
+    Enumerate<T>,
+    Enumerate<F>
+  >;
+
+  type Enumerate<
+    N extends number,
+    Acc extends number[] = [],
+  > = Acc["length"] extends N
+    ? Acc[number]
+    : Enumerate<N, [...Acc, Acc["length"]]>;
+}
+```
+  </Tab>
+</Tabs>
+
+Returns `IPropagation` typed instance instead of throwing exception.
+
+When you configure propagate property of `nestia.config.ts` file, all of SDK functions generated by `@nestia/sdk` will perform propagation mode. The propagation mode means that never throwing exception (`HttpError`) even when response status code is not 200 (or 201), but just returning the `IPropagation` typed object, which can specify its body data type through discriminated union determined by status code.
+
+Looking at below code tabs one by one, then you may understand exactly, what the propagation mode is. As you can see from below example code, [`@TypedException()`](../core/TypedException) decorator function can be utilized to define the failure type with specific status code. Also, if returned status code is out of pre-defined, the `IPropagation.data` type would be automatically casted to `unknown` type.
+
+<Tabs items={[
+  <code>BbsArticlesController.ts</code>,
+  "Propagation Mode SDK",
+  "Utilization Case",
+]}>
+  <Tab>
+```typescript filename="src/controllers/BbsArticlesController.ts" showLineNumbers
+import core from "@nestia/core";
+import { Controller } from "@nestjs/common";
+import typia, { tags } from "typia";
+
+import { IBbsArticle } from "@api/lib/structures/IBbsArticle";
+
+@Controller("bbs/articles/:section")
+export class BbsArticlesController {
+  /**
+   * Update an article.
+   *
+   * @param section Section code
+   * @param id Target article ID
+   * @param input Content to update
+   * @returns Updated content
+   */
+  @core.TypedException<TypeGuardError.IProps>(400)
+  @core.TypedRoute.Put(":id")
+  public async update(
+    @core.TypedParam("section") section: string,
+    @core.TypedParam("id") id: string & tags.Format<"uuid">,
+    @core.TypedBody() input: IBbsArticle.IStore,
+  ): Promise<IBbsArticle> {
+    return {
+      ...typia.random<IBbsArticle>(),
+      id,
+      section,
+      ...input,
+    };
+  }
+}
+```
+  </Tab>
+  <Tab>
+```typescript filename="src/api/functional/bbs/articles/index.ts" showLineNumbers {19, 36-42}
+/**
+ * Update an article.
+ *
+ * @param section Section code
+ * @param id Target article ID
+ * @param input Content to update
+ * @returns Updated content
+ *
+ * @controller BbsArticlesController.update()
+ * @path PUT /bbs/:section/articles/:id
+ * @nestia Generated by Nestia - https://github.com/samchon/nestia
+ */
+export async function update(
+  connection: IConnection,
+  section: string,
+  id: string & Format<"uuid">,
+  input: update.Input,
+): Promise<update.Output> {
+  return PlainFetcher.propagate(
+    {
+      ...connection,
+      headers: {
+        ...connection.headers,
+        "Content-Type": "application/json",
+      },
+    },
+    {
+      ...update.METADATA,
+      path: update.path(section, id),
+    } as const,
+    input,
+  );
+}
+export namespace update {
+  export type Input = Primitive<IBbsArticle.IStore>;
+  export type Output = IPropagation<
+    {
+      200: IBbsArticle;
+      400: TypeGuardError.IProps;
+    },
+    200
+  >;
+
+  export const METADATA = {
+    method: "PUT",
+    path: "/bbs/articles/:section/:id",
+    request: {
+      type: "application/json",
+      encrypted: false,
+    },
+    response: {
+      type: "application/json",
+      encrypted: false,
+    },
+    status: null,
+  } as const;
+
+  export const path = (
+    section: string,
+    id: string & Format<"uuid">,
+  ): string => {
+    return `/bbs/articles/${encodeURIComponent(
+      section ?? "null",
+    )}/${encodeURIComponent(id ?? "null")}`;
+  };
+}
+```
+  </Tab>
+  <Tab>
+```typescript showLineNumbers
+const output = await api.functional.bbs.articles.update(section, id, input);
+if (output.success) {
+  // automatically casted to "IBbsArticle" when status 200 (success)
+  const article: IBbsArticle = output.data;
+} else if (output.status === 400) {
+  // casted to "TypeGuardError.IProps" when status 400
+  const error: TypeGuardError.IProps = output.data;
+} else {
+  // casted to "unknown" when out of pre-defined status codes
+  const result: unknown = output.data;
+}
 ```
   </Tab>
 </Tabs>
@@ -724,279 +1134,6 @@ export async function login(
 }
 export namespace login {
     ...
-}
-```
-  </Tab>
-</Tabs>
-
-
-
-
-## Propagation Mode
-<Tabs items={[
-  <code>nestia.config.ts</code>, 
-  <code>IPropagation.ts</code>,
-]}>
-  <Tab>
-```typescript copy filename="nestia.config.ts" showLineNumbers {17}
-import { INestiaConfig } from "@nestia/sdk";
-import { NestFactory } from "@nestjs/core";
-
-import { YourModule } from "./src/YourModule";
-
-const config: INestiaConfig = {
-  input: async () => {
-    const app = await NestFactory.create(YourModule);
-    // app.setGlobalPrefix("api");
-    // app.enableVersioning({
-    //     type: VersioningType.URI,
-    //     prefix: "v",
-    // })
-    return app;
-  },
-  output: "src/api",
-  propagate: true,
-  distribute: "packages/api",
-};
-export default config;
-```
-  </Tab>
-  <Tab>
-```typescript filename="IPropagation.ts" showLineNumbers
-import { Primitive } from "./Primitive";
-
-/**
- * Propagation type.
- *
- * `IPropagation` is a type gathering all possible status codes and their body
- * data types as a discriminated union type. You can specify the status code and
- * its body data type just by using conditional statement like below.
- *
- * ```typescript
- * type Output = IPropagation<{
- *    200: ISeller.IAuthorized;
- *    400: TypeGuardError.IProps;
- * >};
- *
- * const output: Output = await sdk.sellers.authenticate.join(input);
- * if (output.success) {
- *     // automatically casted to "ISeller.IAuthorized" type
- *     const authorized: ISeller.IAuthorized = output.data;
- * } else if (output.status === 400) {
- *     // automatically casted to "TypeGuardError.IProps" type
- *     const error: TypeGuardError.IProps = output.data;
- * } else {
- *     // unknown type when out of pre-defined status codes
- *     const result: unknown = output.data;
- * }
- * ```
- *
- * For reference, this `IPropagation` type is utilized by SDK library generated by
- * `@nestia/sdk`, when you've configured {@link INestiaConfig.propagate} to be `true`.
- * In that case, SDK functions generated by `@nestia/sdk` no more returns response DTO
- * typed data directly, but returns this `IPropagation` typed object instead.
- *
- * @template StatusMap Map of status code and its body data type.
- * @template Success Default success status code.
- * @author Jeongho Nam - https://github.com/samchon
- */
-export type IPropagation<
-  StatusMap extends {
-    [P in IPropagation.Status]?: any;
-  },
-  Success extends number = 200 | 201,
-> =
-  | {
-      [P in keyof StatusMap]: IPropagation.IBranch<
-        P extends Success ? true : false,
-        P,
-        StatusMap[P]
-      >;
-    }[keyof StatusMap]
-  | IPropagation.IBranch<false, unknown, unknown>;
-export namespace IPropagation {
-  /**
-   * Type of configurable status codes.
-   *
-   * The special characters like `2XX`, `3XX`, `4XX`, `5XX` are meaning the range
-   * of status codes. If `5XX` is specified, it means the status code is in the
-   * range of `500` to `599`.
-   */
-  export type Status = number | "2XX" | "3XX" | "4XX" | "5XX";
-
-  /**
-   * Branch type of propagation.
-   *
-   * `IPropagation.IBranch` is a branch type composing `IPropagation` type,
-   * which is gathering all possible status codes and their body data types
-   * as a union type.
-   */
-  export interface IBranch<Success extends boolean, StatusValue, BodyData> {
-    success: Success;
-    status: StatusValue extends "2XX" | "3XX" | "4XX" | "5XX"
-      ? StatusRange<StatusValue>
-      : StatusValue extends number
-      ? StatusValue
-      : never;
-    data: Primitive<BodyData>;
-    headers: Record<string, string | string[]>;
-  }
-
-  /**
-   * Range of status codes by the first digit.
-   */
-  export type StatusRange<T extends "2XX" | "3XX" | "4XX" | "5XX"> = T extends 0
-    ? IntRange<200, 299>
-    : T extends 3
-    ? IntRange<300, 399>
-    : T extends 4
-    ? IntRange<400, 499>
-    : IntRange<500, 599>;
-
-  type IntRange<F extends number, T extends number> = Exclude<
-    Enumerate<T>,
-    Enumerate<F>
-  >;
-
-  type Enumerate<
-    N extends number,
-    Acc extends number[] = [],
-  > = Acc["length"] extends N
-    ? Acc[number]
-    : Enumerate<N, [...Acc, Acc["length"]]>;
-}
-```
-  </Tab>
-</Tabs>
-
-Returns `IPropagation` typed instance instead of throwing exception.
-
-When you configure propagate property of `nestia.config.ts` file, all of SDK functions generated by `@nestia/sdk` will perform propagation mode. The propagation mode means that never throwing exception (`HttpError`) even when response status code is not 200 (or 201), but just returning the `IPropagation` typed object, which can specify its body data type through discriminated union determined by status code.
-
-Looking at below code tabs one by one, then you may understand exactly, what the propagation mode is. As you can see from below example code, [`@TypedException()`](../core/TypedException) decorator function can be utilized to define the failure type with specific status code. Also, if returned status code is out of pre-defined, the `IPropagation.data` type would be automatically casted to `unknown` type.
-
-<Tabs items={[
-  <code>BbsArticlesController.ts</code>,
-  "Propagation Mode SDK",
-  "Utilization Case",
-]}>
-  <Tab>
-```typescript filename="src/controllers/BbsArticlesController.ts" showLineNumbers
-import core from "@nestia/core";
-import { Controller } from "@nestjs/common";
-import typia, { tags } from "typia";
-
-import { IBbsArticle } from "@api/lib/structures/IBbsArticle";
-
-@Controller("bbs/articles/:section")
-export class BbsArticlesController {
-  /**
-   * Update an article.
-   *
-   * @param section Section code
-   * @param id Target article ID
-   * @param input Content to update
-   * @returns Updated content
-   */
-  @core.TypedException<TypeGuardError.IProps>(400)
-  @core.TypedRoute.Put(":id")
-  public async update(
-    @core.TypedParam("section") section: string,
-    @core.TypedParam("id") id: string & tags.Format<"uuid">,
-    @core.TypedBody() input: IBbsArticle.IStore,
-  ): Promise<IBbsArticle> {
-    return {
-      ...typia.random<IBbsArticle>(),
-      id,
-      section,
-      ...input,
-    };
-  }
-}
-```
-  </Tab>
-  <Tab>
-```typescript filename="src/api/functional/bbs/articles/index.ts" showLineNumbers {19, 36-42}
-/**
- * Update an article.
- *
- * @param section Section code
- * @param id Target article ID
- * @param input Content to update
- * @returns Updated content
- *
- * @controller BbsArticlesController.update()
- * @path PUT /bbs/:section/articles/:id
- * @nestia Generated by Nestia - https://github.com/samchon/nestia
- */
-export async function update(
-  connection: IConnection,
-  section: string,
-  id: string & Format<"uuid">,
-  input: update.Input,
-): Promise<update.Output> {
-  return PlainFetcher.propagate(
-    {
-      ...connection,
-      headers: {
-        ...connection.headers,
-        "Content-Type": "application/json",
-      },
-    },
-    {
-      ...update.METADATA,
-      path: update.path(section, id),
-    } as const,
-    input,
-  );
-}
-export namespace update {
-  export type Input = Primitive<IBbsArticle.IStore>;
-  export type Output = IPropagation<
-    {
-      200: IBbsArticle;
-      400: TypeGuardError.IProps;
-    },
-    200
-  >;
-
-  export const METADATA = {
-    method: "PUT",
-    path: "/bbs/articles/:section/:id",
-    request: {
-      type: "application/json",
-      encrypted: false,
-    },
-    response: {
-      type: "application/json",
-      encrypted: false,
-    },
-    status: null,
-  } as const;
-
-  export const path = (
-    section: string,
-    id: string & Format<"uuid">,
-  ): string => {
-    return `/bbs/articles/${encodeURIComponent(
-      section ?? "null",
-    )}/${encodeURIComponent(id ?? "null")}`;
-  };
-}
-```
-  </Tab>
-  <Tab>
-```typescript showLineNumbers
-const output = await api.functional.bbs.articles.update(section, id, input);
-if (output.success) {
-  // automatically casted to "IBbsArticle" when status 200 (success)
-  const article: IBbsArticle = output.data;
-} else if (output.status === 400) {
-  // casted to "TypeGuardError.IProps" when status 400
-  const error: TypeGuardError.IProps = output.data;
-} else {
-  // casted to "unknown" when out of pre-defined status codes
-  const result: unknown = output.data;
 }
 ```
   </Tab>
