--- a/website/pages/docs/sdk/sdk.mdx
+++ b/website/pages/docs/sdk/sdk.mdx
@@ -115,6 +115,7 @@ Isn't it look like much more convenient and safer than before when using [Swagge
 
 
 ## Configuration
+### `nestia.config.ts`
 <Tabs items={[
   <code>nestia.config.ts</code>, 
   <code>INestiaConfig.ts</code>,
