--- a/website/pages/docs/sdk/sdk.mdx
+++ b/website/pages/docs/sdk/sdk.mdx
@@ -8,12 +8,14 @@ import { Tabs, Tab } from 'nextra-theme-docs'
 ```typescript copy filename="nestia.config.ts" showLineNumbers
 import { INestiaConfig } from "@nestia/sdk";
 import { NestFactory } from "@nestjs/core";
+// import { FastifyAdaptor } from "@nestjs/platform-fastify";
 
 import { YourModule } from "./src/YourModule";
 
 const NESTIA_CONFIG: INestiaConfig = {
   input: async () => {
     const app = await NestFactory.create(YourModule);
+    // const app = await NestFactory.create(YourModule, new FastifyAdaptor());
     // app.setGlobalPrefix("api");
     // app.enableVersioning({
     //     type: VersioningType.URI,
@@ -121,15 +123,17 @@ Isn't it look like much more convenient and safer than before when using [Swagge
   <code>INestiaConfig.ts</code>,
 ]}>
   <Tab>
-```typescript copy filename="nestia.config.ts" showLineNumbers {7-16}
+```typescript copy filename="nestia.config.ts" showLineNumbers {8-17}
 import { INestiaConfig } from "@nestia/sdk";
 import { NestFactory } from "@nestjs/core";
+// import { FastifyAdaptor } from "@nestjs/platform-fastify";
 
 import { YourModule } from "./src/YourModule";
 
 const NESTIA_CONFIG: INestiaConfig = {
   input: async () => {
     const app = await NestFactory.create(YourModule);
+    // const app = await NestFactory.create(YourModule, new FastifyAdaptor());
     // app.setGlobalPrefix("api");
     // app.enableVersioning({
     //     type: VersioningType.URI,
@@ -384,12 +388,13 @@ If your backend application server does not have special configuration like `set
 
 <Tabs 
   items={[
-    'Module',
+    'Module (express)',
+    'Module (fastify)',
     'Directory', 
     'Pattern', 
     'Exclude',
   ]}
-  defaultIndex={1}>
+  defaultIndex={2}>
   <Tab>
 ```typescript copy filename="nestia.config.ts" showLineNumbers {7-15}
 import { INestiaConfig } from "@nestia/sdk";
@@ -400,6 +405,30 @@ import { YourModule } from "./src/YourModule";
 const NESTIA_CONFIG: INestiaConfig = {
   input: async () => {
     const app = await NestFactory.create(YourModule);
+    // app.setGlobalPrefix("api");
+    // app.enableVersioning({
+    //     type: VersioningType.URI,
+    //     prefix: "v",
+    // })
+    return app;
+  },
+  output: "src/api",
+  distribute: "packages/api",
+};
+export default NESTIA_CONFIG;
+```
+  </Tab>
+  <Tab>
+```typescript copy filename="nestia.config.ts" showLineNumbers {8-16}
+import { INestiaConfig } from "@nestia/sdk";
+import { NestFactory } from "@nestjs/core";
+import { FastifyAdaptor } from "@nestjs/platform-fastify";
+
+import { YourModule } from "./src/YourModule";
+
+const NESTIA_CONFIG: INestiaConfig = {
+  input: async () => {
+    const app = await NestFactory.create(YourModule, new FastifyAdaptor());
     // app.setGlobalPrefix("api");
     // app.enableVersioning({
     //     type: VersioningType.URI,
@@ -461,15 +490,17 @@ export default NESTIA_CONFIG;
   "Cloned DTO types"
 ]}>
   <Tab>
-```typescript copy filename="nestia.config.ts" showLineNumbers {17}
+```typescript copy filename="nestia.config.ts" showLineNumbers {19}
 import { INestiaConfig } from "@nestia/sdk";
 import { NestFactory } from "@nestjs/core";
+// import { FastifyAdaptor } from "@nestjs/platform-fastify";
  
 import { YourModule } from "./src/YourModule";
  
 const NESTIA_CONFIG: INestiaConfig = {
   input: async () => {
     const app = await NestFactory.create(YourModule);
+    // const app = await NestFactory.create(YourModule, new FastifyAdaptor());
     // app.setGlobalPrefix("api");
     // app.enableVersioning({
     //     type: VersioningType.URI,
@@ -597,15 +628,17 @@ In that case, it would better to remove the dependency by using this `clone` mod
   <code>IPropagation.ts</code>,
 ]}>
   <Tab>
-```typescript copy filename="nestia.config.ts" showLineNumbers {17}
+```typescript copy filename="nestia.config.ts" showLineNumbers {19}
 import { INestiaConfig } from "@nestia/sdk";
 import { NestFactory } from "@nestjs/core";
+// import { FastifyAdaptor } from "@nestjs/platform-fastify";
 
 import { YourModule } from "./src/YourModule";
 
 const config: INestiaConfig = {
   input: async () => {
     const app = await NestFactory.create(YourModule);
+    // const app = await NestFactory.create(YourModule, new FastifyAdaptor());
     // app.setGlobalPrefix("api");
     // app.enableVersioning({
     //     type: VersioningType.URI,
@@ -1144,15 +1177,17 @@ export namespace login {
 
 
 ## Distribution
-```typescript copy filename="nestia.config.ts" showLineNumbers {17}
+```typescript copy filename="nestia.config.ts" showLineNumbers {19}
 import { INestiaConfig } from "@nestia/sdk";
 import { NestFactory } from "@nestjs/core";
+// import { FastifyAdaptor } from "@nestjs/platform-fastify";
 
 import { YourModule } from "./src/YourModule";
 
 const NESTIA_CONFIG: INestiaConfig = {
   input: async () => {
     const app = await NestFactory.create(YourModule);
+    // const app = await NestFactory.create(YourModule, new FastifyAdaptor());
     // app.setGlobalPrefix("api");
     // app.enableVersioning({
     //     type: VersioningType.URI,
