Close #445 - TypeScript Swagger Editor
https://nestia.io/docs/migrate/

Have built a "TypeScript Swagger Editor" which is a web-based TypeScript editor utilizing `StackBlitzs` for Swagger API specifications, with SDK (Software Development Kit) library and Mockup Simulator generated by `@nestia/migrate`.

If this concept becomes popular, I'll start the next project, `@nestia/editor`. Until that, I'll utilize the `StackBlitzs` as the web-based TypeScript editor.

--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -48,6 +48,7 @@ Nestia is a set of helper libraries for [NestJS](https://docs.nestjs.com), suppo
     - Mockup Simulator for client developers
     - Automatic E2E test functions generator
   - `@nestia/migrate`: migration from Swagger to NestJS
+  - `@nestia/editor`: Online TypeScript Swagger Editor
   - `nestia`: just CLI (command line interface) tool
 
 <br/>
