--- a/website/pages/docs/editor.mdx
+++ b/website/pages/docs/editor.mdx
@@ -58,7 +58,7 @@ For reference, if your backend application utilizes `nestia` (NestJS), you don't
 ## Roadmap
 Currently, "TypeScript Swagger Editor" is utilizing the [StackBlitz](https://stackblitz.com/) as the web-based TypeScript editor. 
 
-However, if many developers agree with the usefulness of the SDK and are interested in "TypeScript Swagger Editor," I am planning to develop a new standalone web application called `@nestia/editor`. It will take advantages of both "Swagger-UI" and "TypeScript Swagger Editor", and provide more convenient features for the API interaction development.
+However, if many developers agree with the usefulness of the SDK and are interested in "TypeScript Swagger Editor", I am planning to develop a new standalone web application called `@nestia/editor`. It will take advantages of both "Swagger-UI" and "TypeScript Swagger Editor", and provide more convenient features for the API interaction development.
 
 I don't know how popular "TypeScript Swagger Editor" would be at this stage, but I hope that I can proceed with the `@nestia/editor` project as I have created something that front (client) developers desperately need.
 
