Fix typo of docs/editor.mdx

--- a/website/pages/docs/editor.mdx
+++ b/website/pages/docs/editor.mdx
@@ -62,4 +62,4 @@ However, if many developers agree with the usefulness of the SDK and are interes
 
 I don't know how popular "TypeScript Swagger Editor" would be at this stage, but I hope that I can proceed with the `@nestia/editor` project as I have created something that front (client) developers desperately need.
 
-Let's `nestia` togather.
+Let's `nestia` together.
