--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -27,20 +27,19 @@ npx nestia template <directory>
 <Tabs items={['npm', 'pnpm', 'yarn']}>
   <Tab>
 ```bash filename="Terminal" copy showLineNumbers
-npm install --save-dev nestia
 npx nestia setup
 ```
   </Tab>
   <Tab>
 ```bash filename="Terminal" copy showLineNumbers
-pnpm install --save-dev nestia
 pnpm nestia setup --manager pnpm
 ```
   </Tab>
   <Tab>
+     <Alert severity="warning">
+       Yarn berry is not supported.
+     </Alert>
 ```bash filename="Terminal" copy showLineNumbers
-# YARN BERRY IS NOT SUPPORTED
-yarn add -D nestia
 yarn nestia setup --manager yarn
 ```
   </Tab>
@@ -59,7 +58,6 @@ Setup Wizard will install and configure everything automatically.
   <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 # SETUP NESTIA
-npm install --save-dev nestia
 npx nestia setup
 
 # INSTALL TS-LOADER & WEBPACK
@@ -70,7 +68,6 @@ npm install --save-dev webpack webpack-cli webpack-node-externals
   <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 # SETUP NESTIA
-pnpm install --save-dev nestia
 pnpm nestia setup --manager pnpm
 
 # INSTALL TS-LOADER & WEBPACK
@@ -79,9 +76,11 @@ pnpm install --save-dev webpack webpack-cli webpack-node-externals
 ```
   </Tab>
   <Tab>
+     <Alert severity="warning">
+       Yarn berry is not supported.
+     </Alert>
 ```bash filename="Terminal" copy showLineNumbers
-# SETUP NESTIA (YARN BERY IS NOT SUPPORTED)
-yarn add -D nestia
+# SETUP NESTIA
 yarn nestia setup --manager yarn
 
 # INSTALL TS-LOADER & WEBPACK
@@ -166,7 +165,6 @@ To accomplish the light JS bundling, install special dependencies like below.
   <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 # SETUP NESTIA
-npm install --save-dev nestia
 npx nestia setup
 
 # INSTALL SPECIAL DEPENDENCIES
@@ -178,7 +176,6 @@ npm install --save-dev copy-webpack-plugin write-file-webpack-plugin
   <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 # SETUP NESTIA
-pnpm install --save-dev nestia
 pnpm nestia setup --manager pnpm
 
 # INSTALL SPECIAL DEPENDENCIES
@@ -188,9 +185,11 @@ pnpm install --save-dev copy-webpack-plugin write-file-webpack-plugin
 ```
   </Tab>
   <Tab>
+     <Alert severity="warning">
+       Yarn berry is not supported.
+     </Alert>
 ```bash filename="Terminal" copy showLineNumbers
-# SETUP NESTIA (YARN BERY IS NOT SUPPORTED)
-yarn add -D nestia
+# SETUP NESTIA
 yarn nestia setup --manager yarn
 
 # INSTALL SPECIAL DEPENDENCIES
@@ -295,19 +294,16 @@ module.exports = {
 <Tabs items={['npm', 'pnpm', 'yarn']}>
   <Tab>
 ```bash filename="Terminal" copy showLineNumbers
-npm install --save-dev nestia
 npx nestia setup
 ```
   </Tab>
   <Tab>
 ```bash filename="Terminal" copy showLineNumbers
-pnpm install --save-dev nestia
 pnpm nestia setup --manager pnpm
 ```
   </Tab>
   <Tab>
 ```bash filename="Terminal" copy showLineNumbers
-yarn add -D nestia
 yarn nestia setup --manager yarn
 ```
   </Tab>
