--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -32,7 +32,7 @@ npx nestia setup
   </Tab>
   <Tab>
 ```bash filename="Terminal" copy showLineNumbers
-pnpm nestia setup --manager pnpm
+npx nestia setup --manager pnpm
 ```
   </Tab>
   <Tab>
@@ -40,7 +40,7 @@ pnpm nestia setup --manager pnpm
        Yarn berry is not supported.
      </Alert>
 ```bash filename="Terminal" copy showLineNumbers
-yarn nestia setup --manager yarn
+npx nestia setup --manager yarn
 ```
   </Tab>
 </Tabs>
@@ -68,7 +68,7 @@ npm install --save-dev webpack webpack-cli webpack-node-externals
   <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 # SETUP NESTIA
-pnpm nestia setup --manager pnpm
+npx nestia setup --manager pnpm
 
 # INSTALL TS-LOADER & WEBPACK
 pnpm install --save-dev ts-loader
@@ -81,7 +81,7 @@ pnpm install --save-dev webpack webpack-cli webpack-node-externals
      </Alert>
 ```bash filename="Terminal" copy showLineNumbers
 # SETUP NESTIA
-yarn nestia setup --manager yarn
+npx nestia setup --manager yarn
 
 # INSTALL TS-LOADER & WEBPACK
 yarn add -D ts-loader
@@ -176,7 +176,7 @@ npm install --save-dev copy-webpack-plugin write-file-webpack-plugin
   <Tab>
 ```bash filename="Terminal" copy showLineNumbers
 # SETUP NESTIA
-pnpm nestia setup --manager pnpm
+npx nestia setup --manager pnpm
 
 # INSTALL SPECIAL DEPENDENCIES
 pnpm install --save-dev ts-loader
@@ -190,7 +190,7 @@ pnpm install --save-dev copy-webpack-plugin write-file-webpack-plugin
      </Alert>
 ```bash filename="Terminal" copy showLineNumbers
 # SETUP NESTIA
-yarn nestia setup --manager yarn
+npx nestia setup --manager yarn
 
 # INSTALL SPECIAL DEPENDENCIES
 yarn add -D ts-loader
@@ -299,12 +299,12 @@ npx nestia setup
   </Tab>
   <Tab>
 ```bash filename="Terminal" copy showLineNumbers
-pnpm nestia setup --manager pnpm
+npx nestia setup --manager pnpm
 ```
   </Tab>
   <Tab>
 ```bash filename="Terminal" copy showLineNumbers
-yarn nestia setup --manager yarn
+npx nestia setup --manager yarn
 ```
   </Tab>
 </Tabs>
