Add discord badge

--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -31,6 +31,11 @@ import Stack from '@mui/material/Stack';
     "Guide Documents",
     "https://img.shields.io/badge/guide-documents-forestgreen",
     "https://nestia.io/docs/",
+  ],
+  [
+    "Discord",
+    "https://img.shields.io/badge/discord-NestJS/Nestia-d91965?style=flat&labelColor=5866f2&logo=discord&logoColor=white&link=https://discord.com/channels/520622812742811698/1197293125434093701",
+    "https://discord.com/channels/520622812742811698/1181877086797967420",
   ]
 ].map(([alt, image, url]) => (
   <a href={url} style={{ marginTop: "30px", marginRight: "6px" }}>
