--- a/website/pages/docs/sdk/swagger.mdx
+++ b/website/pages/docs/sdk/swagger.mdx
@@ -1373,6 +1373,186 @@ export namespace ISwaggerSecurityScheme {
 
 
 
+## Customization
+<Tabs items={[
+    <code>@nestia/core</code>, 
+    <code>MyCustomController.ts</code>, 
+    <code>swagger.json</code>
+  ]} 
+  defaultIndex={1}>
+  <Tab>
+```typescript
+export function SwaggerCustomizer(
+  closure: (props: SwaggerCustomizer.IProps) => unknown,
+): MethodDecorator {
+  return function SwaggerCustomizer(
+    target: Object,
+    propertyKey: string | symbol,
+    descriptor: TypedPropertyDescriptor<any>,
+  ) {
+    Reflect.defineMetadata(
+      "nestia/SwaggerCustomizer",
+      closure,
+      target,
+      propertyKey,
+    );
+    return descriptor;
+  };
+}
+export namespace SwaggerCustomizer {
+  export interface IProps {
+    swagger: ISwagger;
+    method: string;
+    path: string;
+    route: ISwaggerRoute;
+    get(accessor: IAccessor): ISwaggerRoute | undefined;
+  }
+  export interface IAccessor {
+    path: string;
+    method: string;
+  }
+}
+```
+  </Tab>
+  <Tab>
+```typescript showLineNumbers {7-20}
+import { SwaggerCustomizer, TypedParam, TypedRoute } from "@nestia/core";
+import { Controller } from "@nestjs/common";
+import { tags } from "typia";
+
+@Controller("custom")
+export class CustomController {
+  @SwaggerCustomizer((props: SwaggerCustomizer.IProps) => {
+    props.swagger.openapi = "3.0.11";
+    props.route.description = "This is a custom description";
+    (props.route as any)["x-special-symbol"] = "Something Special";
+
+    const neighbor = props.get({
+      method: "get",
+      path: "custom/:id/normal",
+    });
+    if (neighbor) {
+      neighbor.description = "That is the normal description";
+      (neighbor as any)["x-special-symbol"] = "Something Normal";
+    }
+  })
+  @TypedRoute.Get(":key/customize")
+  public customize(@TypedParam("key") key: number): string {
+    return key.toString();
+  }
+
+  @TypedRoute.Get(":id/normal")
+  public normal(@TypedParam("id") id: string & tags.Format<"uuid">): string {
+    return id.toString();
+  }
+}
+```
+  </Tab>
+  <Tab>
+```json showLineNumbers {2, 44-45, 75-76}
+{
+  "openapi": "3.0.11",
+  "servers": [
+    {
+      "url": "https://github.com/samchon/nestia",
+      "description": "insert your server url"
+    }
+  ],
+  "info": {
+    "version": "2.5.9-dev.20240223",
+    "title": "@nestia/test",
+    "description": "Test program of Nestia",
+    "license": {
+      "name": "MIT"
+    }
+  },
+  "paths": {
+    "/custom/{key}/customize": {
+      "get": {
+        "tags": [],
+        "parameters": [
+          {
+            "name": "key",
+            "in": "path",
+            "schema": {
+              "type": "number"
+            },
+            "description": "",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        },
+        "description": "This is a custom description",
+        "x-special-symbol": "Something Special"
+      }
+    },
+    "/custom/{id}/normal": {
+      "get": {
+        "tags": [],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            },
+            "description": "",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        },
+        "description": "That is the normal description",
+        "x-special-symbol": "Something Normal"
+      }
+    }
+  },
+  "components": {
+    "schemas": {},
+    "securitySchemes": {
+      "bearer": {
+        "type": "apiKey",
+        "in": "header",
+        "name": "Authorization"
+      }
+    }
+  }
+}
+```
+  </Tab>
+</Tabs>
+
+To customize the swagger data, utilize the `@SwaggerCustomizer()` decorator.
+
+As you can see from the above example code, callback function defined in the `@SwaggerCustomizer()` decorator is changing the swagger data, because it is called when the `npx nestia swagger` command being executed. Furthermore, it is possible to add plugin property starting with `x-` characters.
+
+In other words, the `@SwaggerCustomizer()` does not affect the runtime behavior of the backend server, but only affects the `swagger.json` file.
+
+
+
+
 ## Distribution
 You can choose two options for `swagger.json` file distribution.
 
