--- a/website/pages/docs/sdk/swagger.mdx
+++ b/website/pages/docs/sdk/swagger.mdx
@@ -1405,17 +1405,21 @@ export namespace SwaggerCustomizer {
     method: string;
     path: string;
     route: ISwaggerRoute;
+    at(func: Function): ISwaggerEndpoint | undefined;
     get(accessor: IAccessor): ISwaggerRoute | undefined;
   }
   export interface IAccessor {
     path: string;
     method: string;
   }
+  export interface ISwaggerEndpoint extends IAccessor {
+    route: ISwaggerRoute;
+  }
 }
 ```
   </Tab>
   <Tab>
-```typescript showLineNumbers {7-20}
+```typescript showLineNumbers {7-18}
 import { SwaggerCustomizer, TypedParam, TypedRoute } from "@nestia/core";
 import { Controller } from "@nestjs/common";
 import { tags } from "typia";
@@ -1427,13 +1431,10 @@ export class CustomController {
     props.route.description = "This is a custom description";
     (props.route as any)["x-special-symbol"] = "Something Special";
 
-    const neighbor = props.get({
-      method: "get",
-      path: "custom/:id/normal",
-    });
+    const neighbor = props.at(CustomController.prototype.normal);
     if (neighbor) {
       neighbor.description = "That is the normal description";
-      (neighbor as any)["x-special-symbol"] = "Something Normal";
+      (neighbor.route as any)["x-special-symbol"] = "Something Normal";
     }
   })
   @TypedRoute.Get(":key/customize")
