--- a/website/pages/docs/sdk/swagger.mdx
+++ b/website/pages/docs/sdk/swagger.mdx
@@ -1384,21 +1384,7 @@ export namespace ISwaggerSecurityScheme {
 ```typescript
 export function SwaggerCustomizer(
   closure: (props: SwaggerCustomizer.IProps) => unknown,
-): MethodDecorator {
-  return function SwaggerCustomizer(
-    target: Object,
-    propertyKey: string | symbol,
-    descriptor: TypedPropertyDescriptor<any>,
-  ) {
-    Reflect.defineMetadata(
-      "nestia/SwaggerCustomizer",
-      closure,
-      target,
-      propertyKey,
-    );
-    return descriptor;
-  };
-}
+): MethodDecorator;
 export namespace SwaggerCustomizer {
   export interface IProps {
     swagger: ISwagger;
