--- a/website/pages/docs/core/TypedFormData.mdx
+++ b/website/pages/docs/core/TypedFormData.mdx
@@ -436,7 +436,7 @@ exports.BbsArticlesController = BbsArticlesController = __decorate(
 
 Just call `@TypedFormData.Body()` function on the request body parameter, that's all.
 
-`Nestia` will analyze your type (`IBbsArticleCreate`), and writes optimal code for the target type, in the compilation level. If you click the "Complied JavaScript File" tab of above, you can see the optimal transformation and validation code. 
+`Nestia` will analyze your type (`IBbsArticleCreate`), and writes optimal code for the target type, in the compilation level. If you click the "Compiled JavaScript File" tab of above, you can see the optimal transformation and validation code. 
 
 Such optimization is called AOT (Ahead of Time) compilation, and it is the secret of `@TypedFormData.Body`.
 
