Add `chunkFormat` option on the webpack singile file builder

--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -231,6 +231,7 @@ module.exports = {
   output: {
     path: path.join(__dirname, "dist"),
     filename: "[name].js",
+    chunkFormat: false,
   },
   optimization: {
     minimize: true,
