Discard swagger v2 supporting from `@nestia/migrate`.

--- a/website/pages/docs/editor.mdx
+++ b/website/pages/docs/editor.mdx
@@ -3,6 +3,10 @@ import { Callout } from 'nextra-theme-docs'
 import EditorMovie from "../../src/movies/editor/EditorMovie";
 
 ## TypeScript Swagger Editor
+<Callout>
+  Supports OpenAPI v3.0 / v3.1
+</Callout>
+
 <EditorMovie mode="sdk" />
 
 > Put your `swagger.json` file, then "TypeScript Swagger Editor" be opened.
