--- a/website/pages/docs/migrate.mdx
+++ b/website/pages/docs/migrate.mdx
@@ -4,6 +4,10 @@ import EditorMovie from "../../src/movies/editor/EditorMovie";
 
 # Migration from Swagger
 ## Outline
+<Callout>
+  Supports OpenAPI v3.0 / v3.1
+</Callout>
+
 ```bash filename="Terminal" copy showLineNumbers {}
 npx @nestia/migrate
 ```
