`@nestia/editor` contains swagger-ui

--- a/website/pages/docs/migrate.mdx
+++ b/website/pages/docs/migrate.mdx
@@ -78,11 +78,11 @@ Then, you can test the migrated NestJS Project, SDK library and Mockup Simulator
 > Put your `swagger.json` file, then "TypeScript Swagger Editor" be opened.
 
   - Demo Editors
-    - BBS (Bullet-in Board System): [NestJS Project](https://stackblitz.com/edit/jjqnuw?file=README.md&startScript=build:test,test) / [SDK & Simulator](https://stackblitz.com/edit/qwxcjq?file=README.md,test%2Fstart.ts&startScript=test:simulate)
-    - Shopping Mall: [NestJS Project](https://stackblitz.com/edit/1g6adb?file=README.md&startScript=build:test,test) / [SDK & Simulator](https://stackblitz.com/edit/zpm7vq?file=README.md,test%2Fstart.ts&startScript=test:simulate)
-    - Clickhouse: [NestJS Project](https://stackblitz.com/edit/fzenpq?file=README.md&startScript=build:test,test) / [SDK & Simulator](https://stackblitz.com/edit/b22czd?file=README.md,test%2Fstart.ts&startScript=test:simulate)
-    - Fireblocks: [NestJS Project](https://stackblitz.com/edit/rraebz?file=README.md&startScript=build:test,test) / [SDK & Simulator](https://stackblitz.com/edit/yxpdw5?file=README.md,test%2Fstart.ts&startScript=test:simulate)
-    - 아임포트: [NestJS Project](https://stackblitz.com/edit/5wzs6p?file=README.md&startScript=build:test,test) / [SDK & Simulator](https://stackblitz.com/edit/9nxj5y?file=README.md,test%2Fstart.ts&startScript=test:simulate)
-    - 토스페이먼츠: [NestJS Project](https://stackblitz.com/edit/ssvg4n?file=README.md&startScript=build:test,test) [SDK & Simulator](https://stackblitz.com/edit/gcdzye?file=README.md,test%2Fstart.ts&startScript=test:simulate)
+    - BBS (Bullet-in Board System): [NestJS Project](https://stackblitz.com/edit/jjqnuw?file=README.md&startScript=build:test,test) / [SDK & Simulator](https://stackblitz.com/edit/yyf3nl?file=README.md,test%2Fstart.ts&startScript=swagger&startScript=hello)
+    - Shopping Mall: [NestJS Project](https://stackblitz.com/edit/1g6adb?file=README.md&startScript=build:test,test) / [SDK & Simulator](https://stackblitz.com/edit/eue3bo?file=README.md,test%2Fstart.ts&startScript=swagger&startScript=hello)
+    - Clickhouse: [NestJS Project](https://stackblitz.com/edit/fzenpq?file=README.md&startScript=build:test,test) / [SDK & Simulator](https://stackblitz.com/edit/p5y9u3?file=README.md,test%2Fstart.ts&startScript=swagger&startScript=hello)
+    - Fireblocks: [NestJS Project](https://stackblitz.com/edit/rraebz?file=README.md&startScript=build:test,test) / [SDK & Simulator](https://stackblitz.com/edit/jvdf9f?file=README.md,test%2Fstart.ts&startScript=swagger&startScript=hello)
+    - 아임포트: [NestJS Project](https://stackblitz.com/edit/5wzs6p?file=README.md&startScript=build:test,test) / [SDK & Simulator](https://stackblitz.com/edit/ldlfqp?file=README.md,test%2Fstart.ts&startScript=swagger&startScript=hello)
+    - 토스페이먼츠: [NestJS Project](https://stackblitz.com/edit/ssvg4n?file=README.md&startScript=build:test,test) [SDK & Simulator](https://stackblitz.com/edit/hdtksu?file=README.md,test%2Fstart.ts&startScript=swagger&startScript=hello)
 
 [![Example Case](/images/editor/stackblitz.png)](https://stackblitz.com/edit/1g6adb?file=README.md&startScript=build:test,test)
